Fix way too big logo in header

--- a/assets/style/header.less
+++ b/assets/style/header.less
@@ -12,6 +12,7 @@
 
     #header-logo {
         flex: 0 0 200px;
+        max-height: 100px;
 
         @media @mobile {
             flex-basis: 150px;
